[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "urax_adb"
version = "2.0.3"
authors = [
  { name="Nguyen Thai Minh", email="ntm09112012@gmail.com" },
]
description = "Running adb on Python made easier."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/thaiminhnguyen1999/urax_adb"
Issues = "https://github.com/thaiminhnguyen1999/urax_adb/issues"